[tool.poetry]
name = "repl_python3_beta_bitcoin-wallet-generator"
version = "0.1.0"
description = "Replit Wallet"
authors = ["Soren Rood <sorenrood@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.0.0"
pywallet = "^0.1.0"
replit = "3.0.0"
bit = "^0.7.2"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
